fix css of radio button on mobile

--- a/style.css
+++ b/style.css
@@ -675,7 +675,7 @@ input[type="radio"] {
   border-radius: 50%;
   outline: none;
   cursor: pointer;
-  padding: 0%;
+  padding: 0% !important;
   margin: 0px;
   margin-top: 8px;
   /* margin-right: 16px;
